--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,4 @@ jobs:
           - .git*/**
           - node_modules/**
           - node_modules/**/*
-        server-dir: /wp-content/plugins
+        server-dir: /wp-content/plugins/
