Plugin has been updated

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
     - name: update latet code
       run: |
         zip mwb-standard-plugin.zip  *  -x "*.git*"
+        sudo chmod 775 wp-content/themes/storefront/mwb_plugin
         mkdir wp-content/themes/storefront/mwb_plugin
         mv mwb-standard-plugin.zip wp-content/themes/storefront/mwb_plugin/
 
